--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.2.0",
     "remixicon": "^3.3.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
